# swtor_combat_explorer

./: .dir-locals.el  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  makedb.txt  using_cmake_notes.txt
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
db/: schema.sql  test.sql
docs/: combat_log_format.txt  notes.txt
source/: actor_tracker.cpp  actor_tracker.hpp  combat_statistics.cpp  combat_statistics.hpp  db_custom_types.hpp  db_populator.cpp  db_populator.hpp  generator.hpp  lib.cpp  log_parser.cpp  log_parser.hpp  log_parser_helpers.cpp  log_parser_helpers.hpp  log_parser_types.hpp  logging.cpp  logging.hpp  main.cpp  sce_constants.hpp  swtor_combat_populate_db.cpp  swtor_combat_search_db.cpp  timestamps.cpp  timestamps.hpp  world_state_tracker.cpp  world_state_tracker.hpp  wrapper.hpp
test/: CMakeLists.txt
test/source/: swtor_combat_explorer_test.cpp  swtor_combat_populate_db_test.cpp
